Make sure to pass <embed> attributes to plugins in the source order.  Bug 234675, r=peterlubczynski, sr=jst